--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.38</version>
+    </dependency>
   </dependencies>
 
   <build>
