master -> multi language -> add template and ukrainian localization

--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -1,160 +1,121 @@
+ua.error.login=False login or password, try again!
+ua.error.no_free_masterss=All masters are busy, please try later or call to the manager.
+ua.error.register=Error with registration, some fields are invalid. \nPlease, try again.
+ua.message.register_succses=Register successfully!
 
-ua.label=СТО Люкс
-ua.header.home=Головна сторінка
-ua.header.services=Послуги
-ua.header.vacancies=Вакансії
-ua.header.orders=Замовлення
-ua.header.edit_services=Редагування послуг
-ua.header.customers=Клієнти
-ua.header.masters=Майстри
-ua.header.logout=Вихід
-ua.header.login=Вхід
-ua.header.register=Реєстрація
+ua.label=\u0421\u0422\u041E \u041B\u044E\u043A\u0441
+ua.money=\u0433\u0440\u043D
+ua.filter=\u0424\u0456\u043B\u044C\u0442\u0440\u0443\u0432\u0430\u0442\u0438
 
-ua.footer.copy-right=Всі права захищено.
-ua.footer.address="Вул. Пилипа Орлика 46, м. Кам'янець-Подільський"
-ua.footer.networks="Ми в соціальних мережах:"
+ua.home=\u0413\u043E\u043B\u043E\u0432\u043D\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0430
+ua.login=\u0412\u0445\u0456\u0434
+ua.register=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
+ua.logout=\u0412\u0438\u0445\u0456\u0434
+ua.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0438
+ua.vacancies=\u0412\u0430\u043A\u0430\u043D\u0441\u0456\u0457
+ua.orders=\u0417\u0430\u043C\u043E\u0432\u043B\u0435\u043D\u043D\u044F
+ua.customers=\u041A\u043B\u0456\u0454\u043D\u0442\u0438
+ua.masters=\u041C\u0430\u0439\u0441\u0442\u0440\u0438
 
-ua.home.title=Головна сторінка
-ua.home.jumbtron.slogan="СТО Люкс - всі види слюсарного, кузовного ремонту і технічного облуговування"
-ua.home.jumbtron.description="Автосервіс «СТО Люкс» надає широкий спектр послуг з ремонту автомобілів \
-  більше 20 років! Ми займаємося повним циклом техобслуговування автомобіля, \
-  який охоплює всі вузли і деталі,всі можливі життєво важливі системи Вашого автомобіля."
-ua.home.services=Всі послуги:
-ua.home.ye=грн.
-us.home.more_information=Деталі про цю категорію »
+ua.name=\u0406\u043C'\u044F
+ua.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+ua.born_date=\u0414\u0430\u0442\u0430 \u043D\u0430\u0440\u043E\u0434\u0436\u0435\u043D\u043D\u044F
+ua.address=\u0410\u0434\u0440\u0435\u0441\u0430
+ua.phone=\u0422\u0435\u043B\u0435\u0444\u043E\u043D
+ua.post=\u041F\u043E\u0441\u0430\u0434\u0430
+ua.work_place=\u041C\u0456\u0441\u0446\u0435 \u0440\u043E\u0431\u043E\u0442\u0438
+ua.car_brand=\u041C\u0430\u0440\u043A\u0430 \u043C\u0430\u0448\u0438\u043D\u0438
+ua.car_model=\u041C\u043E\u0434\u0435\u043B\u044C \u043C\u0430\u0448\u0438\u043D\u0438
+ua.license_plate=\u041D\u043E\u043C\u0435\u0440\u043D\u0438\u0439 \u0437\u043D\u0430\u043A
 
-ua.add_new_master.title=Додавання нового майстра
-ua.add_new_master.form_title=Новий майстер
-ua.add_new_master.name=Ім'я
-ua.add_new_master.surname=Прізвище
-ua.add_new_master.born_date=Дата народження
-ua.add_new_master.address=Адреса
-ua.add_new_master.passport=Серія паспорту
-ua.add_new_master.mobile=Номер телефону
-ua.add_new_master.post=Посада
-ua.add_new_master.work_place=Місце роботи
-ua.add_new_master.add=Додати
+ua.authorization=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0456\u044F
+ua.username=\u041B\u043E\u0433\u0456\u043D
+ua.password=\u041F\u0430\u0440\u043E\u043B\u044C
+ua.email=\u0415\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430 \u043F\u043E\u0448\u0442\u0430
 
-ua.add.new.order.title=Додавання нового замовлення
-ua.add.new.order.form_title=Нове замовлення
-ua.add.new.order.car_brand=Марка машини
-ua.add.new.order.car_model=Модель машини
-ua.add.new.order.license_plate=Номерний знак
-ua.add.new.order.address="Місце прийому машини
-ua.add.new.order.description=Детальний опис проблеми
-ua.add.new.order.add=Створити замовлення
-
-ua.authorization.title=
-ua.authorization.username=
-ua.authorization.password=
-ua.authorization.email=
-ua.register.title=
-ua.register.name=
-ua.register.surname=
-ua.register.born_date=
-ua.register.phone=
-ua.register.phone_placeholder=
-ua.register.submit=
-ua.login.forgot_password=
-ua.login.submit=
-ua.forgot.submit=
+ua.add_order=\u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0435 \u0437\u0430\u043C\u043E\u0432\u043B\u0435\u043D\u043D\u044F
 
 
+ua.header.edit_services=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u043F\u043E\u0441\u043B\u0443\u0433
+ua.footer.copy-right=\u0412\u0441\u0456 \u043F\u0440\u0430\u0432\u0430 \u0437\u0430\u0445\u0438\u0449\u0435\u043D\u043E.
+ua.footer.address=\u0412\u0443\u043B. \u041F\u0438\u043B\u0438\u043F\u0430 \u041E\u0440\u043B\u0438\u043A\u0430 46, \u043C. \u041A\u0430\u043C'\u044F\u043D\u0435\u0446\u044C-\u041F\u043E\u0434\u0456\u043B\u044C\u0441\u044C\u043A\u0438\u0439
+ua.footer.networks=\u041C\u0438 \u0432 \u0441\u043E\u0446\u0456\u0430\u043B\u044C\u043D\u0438\u0445 \u043C\u0435\u0440\u0435\u0436\u0430\u0445:
 
-eng.label=СТО Люкс
-eng.header.home=Home page
-eng.header.services=Services
-eng.header.vacancies=Vacancies
-eng.header.orders=Orders
-eng.header.edit_services=Edit services
-eng.header.customers=Customers
-eng.header.masters=Masters
-eng.header.logout=Logout
-eng.header.login=Login
-eng.header.register=Register
+ua.home.jumbtron.slogan=\u0421\u0422\u041E \u041B\u044E\u043A\u0441 - \u0432\u0441\u0456 \u0432\u0438\u0434\u0438 \u0441\u043B\u044E\u0441\u0430\u0440\u043D\u043E\u0433\u043E, \u043A\u0443\u0437\u043E\u0432\u043D\u043E\u0433\u043E \u0440\u0435\u043C\u043E\u043D\u0442\u0443 \u0456 \u0442\u0435\u0445\u043D\u0456\u0447\u043D\u043E\u0433\u043E \u043E\u0431\u043B\u0443\u0433\u043E\u0432\u0443\u0432\u0430\u043D\u043D\u044F
+ua.home.jumbtron.description=\u0410\u0432\u0442\u043E\u0441\u0435\u0440\u0432\u0456\u0441 \u00AB\u0421\u0422\u041E \u041B\u044E\u043A\u0441\u00BB \u043D\u0430\u0434\u0430\u0454 \u0448\u0438\u0440\u043E\u043A\u0438\u0439 \u0441\u043F\u0435\u043A\u0442\u0440 \u043F\u043E\u0441\u043B\u0443\u0433 \u0437 \u0440\u0435\u043C\u043E\u043D\u0442\u0443 \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u0456\u0432 \
+  \u0431\u0456\u043B\u044C\u0448\u0435 20 \u0440\u043E\u043A\u0456\u0432! \u041C\u0438 \u0437\u0430\u0439\u043C\u0430\u0454\u043C\u043E\u0441\u044F \u043F\u043E\u0432\u043D\u0438\u043C \u0446\u0438\u043A\u043B\u043E\u043C \u0442\u0435\u0445\u043E\u0431\u0441\u043B\u0443\u0433\u043E\u0432\u0443\u0432\u0430\u043D\u043D\u044F \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044F, \
+  \u044F\u043A\u0438\u0439 \u043E\u0445\u043E\u043F\u043B\u044E\u0454 \u0432\u0441\u0456 \u0432\u0443\u0437\u043B\u0438 \u0456 \u0434\u0435\u0442\u0430\u043B\u0456,\u0432\u0441\u0456 \u043C\u043E\u0436\u043B\u0438\u0432\u0456 \u0436\u0438\u0442\u0442\u0454\u0432\u043E \u0432\u0430\u0436\u043B\u0438\u0432\u0456 \u0441\u0438\u0441\u0442\u0435\u043C\u0438 \u0412\u0430\u0448\u043E\u0433\u043E \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044F.
+ua.home.services=\u0412\u0441\u0456 \u043F\u043E\u0441\u043B\u0443\u0433\u0438:
+us.home.more_information=\u0414\u0435\u0442\u0430\u043B\u0456 \u043F\u0440\u043E \u0446\u044E \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0456\u044E
 
-eng.footer.copy-right=Всі права захищено.
-eng.footer.address=Вул. Пилипа Орлика 46, м. Кам'янець-Подільський
-eng.footer.networks=Ми в соціальних мережах:
+ua.add_new_master.title=\u0414\u043E\u0434\u0430\u0432\u0430\u043D\u043D\u044F \u043D\u043E\u0432\u043E\u0433\u043E \u043C\u0430\u0439\u0441\u0442\u0440\u0430
+ua.add_new_master.form_title=\u041D\u043E\u0432\u0438\u0439 \u043C\u0430\u0439\u0441\u0442\u0435\u0440
+ua.add_new_master.passport=\u0421\u0435\u0440\u0456\u044F \u043F\u0430\u0441\u043F\u043E\u0440\u0442\u0443
+ua.add_new_master.add=\u0414\u043E\u0434\u0430\u0442\u0438
 
-eng.home.title=Головна сторінка
-eng.home.jumbtron.slogan="СТО Люкс - всі види слюсарного, кузовного ремонту і технічного облуговування"
-eng.home.jumbtron.description="Автосервіс «СТО Люкс» надає широкий спектр послуг з ремонту автомобілів \
-  більше 20 років! Ми займаємося повним циклом техобслуговування автомобіля, \
-  який охоплює всі вузли і деталі,всі можливі життєво важливі системи Вашого автомобіля."
-eng.home.services=Всі послуги:
-eng.home.ye=грн.
-eng.home.more_information=Деталі про цю категорію »
+ua.add_new_order.title=\u0414\u043E\u0434\u0430\u0432\u0430\u043D\u043D\u044F \u043D\u043E\u0432\u043E\u0433\u043E \u0437\u0430\u043C\u043E\u0432\u043B\u0435\u043D\u043D\u044F
+ua.add_new_order.form_title=\u041D\u043E\u0432\u0435 \u0437\u0430\u043C\u043E\u0432\u043B\u0435\u043D\u043D\u044F
 
-eng.add_new_master.title=Додавання нового майстра
-eng.add_new_master.form_title=Новий майстер
-eng.add_new_master.name=Ім'я
-eng.add_new_master.surname=Прізвище
-eng.add_new_master.born_date=Дата народження
-eng.add_new_master.address=Адреса
-eng.add_new_master.passport=Серія паспорту
-eng.add_new_master.mobile=Номер телефону
-eng.add_new_master.post=Посада
-eng.add_new_master.work_place=Місце роботи
-eng.add_new_master.add=Додати
-
-eng.add.new.order.title=Додавання нового замовлення
-eng.add.new.order.form_title=Нове замовлення
-eng.add.new.order.car_brand=Марка машини
-eng.add.new.order.car_model=Модель машини
-eng.add.new.order.license_plate=Номерний знак
-eng.add.new.order.address="Місце прийому машини
-eng.add.new.order.description=Детальний опис проблеми
-eng.add.new.order.add=Створити замовлення
+ua.add_new_order.address=\u041C\u0456\u0441\u0446\u0435 \u043F\u0440\u0438\u0439\u043E\u043C\u0443 \u043C\u0430\u0448\u0438\u043D\u0438
+ua.add_new_order.description=\u0414\u0435\u0442\u0430\u043B\u044C\u043D\u0438\u0439 \u043E\u043F\u0438\u0441 \u043F\u0440\u043E\u0431\u043B\u0435\u043C\u0438
+ua.add_new_order.add=\u0421\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u0437\u0430\u043C\u043E\u0432\u043B\u0435\u043D\u043D\u044F
 
 
+ua.register.submit=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044F
+ua.login.forgot_password=\u0417\u0430\u0431\u0443\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+ua.login.submit=\u0423\u0432\u0456\u0439\u0442\u0438
+ua.forgot.submit=\u0421\u043A\u0438\u043D\u0443\u0442\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 
+ua.customers.register_date=\u0414\u0430\u0442\u0430 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0457
+ua.customers.used_bus=\u0412\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u0430\u043D\u043D\u044F \u043C\u0456\u043A\u0440\u043E\u0430\u0432\u0442\u043E\u0431\u0443\u0441\u0430
 
+ua.masters.passport=\u041D\u043E\u043C\u0435\u0440 \u043F\u0430\u0441\u043F\u043E\u0440\u0442\u0443
+ua.masters.status=\u0421\u0442\u0430\u0442\u0443\u0441
+ua.masters.add_master=\u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u043E\u0433\u043E \u043C\u0430\u0439\u0441\u0442\u0440\u0430
 
-rus.label=СТО Люкс
-rus.header.home=Главная страница
-rus.header.services=Услуги
-rus.header.vacancies=Вакансии
-rus.header.orders=Заказы
-rus.header.edit_services=Редактирование услуг
-rus.header.customers=Клиенты
-rus.header.masters=Мастера
-rus.header.logout=Выход
-rus.header.login=Вход
-rus.header.register=Регистрация
+ua.orders.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0430
+ua.orders.price=\u0412\u0430\u0440\u0442\u0456\u0441\u0442\u044C
+ua.orders.reception_point=\u041C\u0456\u0441\u0446\u0435 \u0440\u0435\u043C\u043E\u043D\u0442\u0443
+ua.orders.master=\u041C\u0430\u0439\u0441\u0442\u0435\u0440
+ua.orders.created_date=\u0414\u0430\u0442\u0430 \u0441\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F
 
-rus.footer.copy-right=Всі права захищено.
-rus.footer.address=Вул. Пилипа Орлика 46, м. Кам'янець-Подільський
-rus.footer.networks=Ми в соціальних мережах:
+ua.services.name=\u0406\u043C'\u044F \u043F\u043E\u0441\u043B\u0443\u0433\u0438
+ua.services.category=\u0422\u0438\u043F \u043F\u043E\u0441\u043B\u0443\u0433\u0438
+ua.services.price=\u0412\u0430\u0440\u0442\u0456\u0441\u0442\u044C \u043F\u043E\u0441\u043B\u0443\u0433\u0438
+ua.services.save=\u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u0437\u043C\u0456\u043D\u0438
 
-rus.home.title=Головна сторінка
-rus.home.jumbtron.slogan="СТО Люкс - всі види слюсарного, кузовного ремонту і технічного облуговування"
-rus.home.jumbtron.description="Автосервіс «СТО Люкс» надає широкий спектр послуг з ремонту автомобілів \
-  більше 20 років! Ми займаємося повним циклом техобслуговування автомобіля, \
-  який охоплює всі вузли і деталі,всі можливі життєво важливі системи Вашого автомобіля."
-rus.home.services=Всі послуги:
-rus.home.ye=грн.
-rus.home.more_information=Деталі про цю категорію »
-
-rus.add_new_master.title=Додавання нового майстра
-rus.add_new_master.form_title=Новий майстер
-rus.add_new_master.name=Ім'я
-rus.add_new_master.surname=Прізвище
-rus.add_new_master.born_date=Дата народження
-rus.add_new_master.address=Адреса
-rus.add_new_master.passport=Серія паспорту
-rus.add_new_master.mobile=Номер телефону
-rus.add_new_master.post=Посада
-rus.add_new_master.work_place=Місце роботи
-rus.add_new_master.add=Додати
-
-
-rus.add.new.order.title=Додавання нового замовлення
-rus.add.new.order.form_title=Нове замовлення
-rus.add.new.order.car_brand=Марка машини
-rus.add.new.order.car_model=Модель машини
-rus.add.new.order.license_plate=Номерний знак
-rus.add.new.order.address="Місце прийому машини
-rus.add.new.order.description=Детальний опис проблеми
-rus.add.new.order.add=Створити замовлення
+ua.vacancies.name1=\u041C\u0435\u0445\u0430\u043D\u0456\u043A \u0430\u0432\u0442\u043E\u0441\u043B\u044E\u0441\u0430\u0440
+ua.vacancies.conditions1=<h2>\u0423\u043C\u043E\u0432\u0438 \u0440\u043E\u0431\u043E\u0442\u0438:</h2><br>\
+  \u0411\u0443\u0434\u043D\u0456: 09:00 - 20:00<br>\
+  \u0421\u0443\u0431\u043E\u0442\u0430: 10:00 - 18:00<br>\
+  \u041D\u0435\u0434\u0456\u043B\u044F: \u0432\u0438\u0445\u0456\u0434\u043D\u0438\u0439<br>\
+  \u0417.\u043F. \u0441\u0442\u0430\u0431\u0456\u043B\u044C\u043D\u043E \u0432\u0438\u0441\u043E\u043A\u0430
+ua.vacancies.requirements1=<h2>\u0412\u0438\u043C\u043E\u0433\u0438:</h2><br>\
+<ul>\
+<li>\u0434\u043E\u0441\u0432\u0456\u0434 \u0440\u043E\u0431\u043E\u0442\u0438 \u043D\u0435 \u043C\u0435\u043D\u0448\u0435 3-\u043E\u0445 \u0440\u043E\u043A\u0456\u0432.</li>\
+<li>\u0437\u043D\u0430\u043D\u043D\u044F \u0431\u0443\u0434\u043E\u0432\u0438 \u0441\u0443\u0447\u0430\u0441\u043D\u043E\u0433\u043E \u043B\u0435\u0433\u043A\u043E\u0432\u043E\u0433\u043E \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044F\
+\u0456 \u043F\u0440\u0438\u043D\u0446\u0438\u043F\u0456\u0432 \u0439\u043E\u0433\u043E \u0440\u0435\u043C\u043E\u043D\u0442\u0443.\
+</li>\
+<li>\u0437\u043D\u0430\u043D\u043D\u044F \u0442\u0435\u043E\u0440\u0456\u0457 \u0442\u0430 \u043F\u0440\u0430\u043A\u0442\u0438\u0447\u043D\u0438\u0439 \u0434\u043E\u0441\u0432\u0456\u0434 \u0432 \u043F\u0438\u0442\u0430\u043D\u043D\u044F\u0445\
+\u0437\u0430\u043C\u0456\u043D\u0438 \u043C\u0430\u0441\u0435\u043B \u0442\u0430 \u0456\u043D\u0448\u0438\u0445 \u0440\u043E\u0431\u043E\u0447\u0438\u0445 \u0440\u0456\u0434\u0438\u043D.\
+</li>\
+<li>\u0437\u043D\u0430\u043D\u043D\u044F \u0441\u0442\u0430\u043D\u0434\u0430\u0440\u0442\u0456\u0432 \u0442\u0430 \u043D\u043E\u0440\u043C\u0430\u0442\u0438\u0432\u0456\u0432 \u043F\u043E \u0440\u0435\u043C\u043E\u043D\u0442\u0443 \u0442\u0430\
+\u043E\u0431\u0441\u043B\u0443\u0433\u043E\u0432\u0443\u0432\u0430\u043D\u043D\u044E \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u0456\u0432\
+</li>\
+<li>\u0437\u043D\u0430\u043D\u043D\u044F \u043F\u0440\u0430\u0432\u0438\u043B \u0442\u0435\u0445\u043D\u0456\u043A\u0438 \u0431\u0435\u0437\u043F\u0435\u043A\u0438 \u0442\u0430 \u043F\u0440\u043E\u0442\u0438\u043F\u043E\u0436\u0435\u0436\u043D\u043E\u0457 \u0431\u0435\u0437\u043F\u0435\u043A\u0438.</li>\
+<li>\u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u043B\u044C\u043D\u0456\u0441\u0442\u044C \u0442\u0430 \u0430\u043A\u0443\u0440\u0430\u0442\u043D\u0456\u0441\u0442\u044C.</li>\
+</ul>
+ua.vacancies.name2=\u0410\u0432\u0442\u043E\u0441\u043B\u044E\u0441\u0430\u0440 \u0437\u0456 \u0432\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044F \u0433\u0430\u0437\u043E\u0431\u0430\u043B\u043E\u043D\u043D\u043E\u0433\u043E \u043E\u0431\u043B\u0430\u0434\u043D\u0430\u043D\u043D\u044F
+ua.vacancies.conditions2=<h2>\u0423\u043C\u043E\u0432\u0438 \u0440\u043E\u0431\u043E\u0442\u0438:</h2><br>\
+\u0411\u0443\u0434\u043D\u0456: 09:00 - 20:00<br>\
+\u0421\u0443\u0431\u043E\u0442\u0430: 10:00 - 18:00<br>\
+\u041D\u0435\u0434\u0456\u043B\u044F: \u0432\u0438\u0445\u0456\u0434\u043D\u0438\u0439<br>\
+\u0417.\u043F. \u0441\u0442\u0430\u0431\u0456\u043B\u044C\u043D\u043E \u0432\u0438\u0441\u043E\u043A\u0430
+ua.vacancies.requirements2=<h2>\u0412\u0438\u043C\u043E\u0433\u0438:</h2><br>\
+<ul>\
+<li>\u0434\u043E\u0441\u0432\u0456\u0434 \u0440\u043E\u0431\u043E\u0442\u0438 \u043D\u0435 \u043C\u0435\u043D\u0448\u0435 3-\u043E\u0445 \u0440\u043E\u043A\u0456\u0432.</li>\
+<li>\u0437\u043D\u0430\u043D\u043D\u044F \u043F\u0440\u0430\u0432\u0438\u043B \u0442\u0435\u0445\u043D\u0456\u043A\u0438 \u0431\u0435\u0437\u043F\u0435\u043A\u0438 \u0442\u0430 \u043F\u0440\u043E\u0442\u0438\u043F\u043E\u0436\u0435\u0436\u043D\u043E\u0457 \u0431\u0435\u0437\u043F\u0435\u043A\u0438.</li>\
+<li>\u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u043B\u044C\u043D\u0456\u0441\u0442\u044C \u0442\u0430 \u0430\u043A\u0443\u0440\u0430\u0442\u043D\u0456\u0441\u0442\u044C.</li>\
+<li>\u0434\u0435\u0442\u0430\u043B\u0456 \u0437\u0430 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u043E\u043C.</li>\
+</ul>
+ua.vacancies.contacts=\u041A\u043E\u043D\u0442\u0430\u043A\u0442\u043D\u0438\u0439 \u043D\u043E\u043C\u0435\u0440:
