--- a/src/main/resources/language-en.properties
+++ b/src/main/resources/language-en.properties
@@ -84,38 +84,32 @@ services.category=Service type
 services.price=Price
 services.save=Save
 
-vacancies.name1=\u041C\u0435\u0445\u0430\u043D\u0456\u043A \u0430\u0432\u0442\u043E\u0441\u043B\u044E\u0441\u0430\u0440
-vacancies.conditions1=<h2>\u0423\u043C\u043E\u0432\u0438 \u0440\u043E\u0431\u043E\u0442\u0438:</h2><br>\
-  \u0411\u0443\u0434\u043D\u0456: 09:00 - 20:00<br>\
-  \u0421\u0443\u0431\u043E\u0442\u0430: 10:00 - 18:00<br>\
-  \u041D\u0435\u0434\u0456\u043B\u044F: \u0432\u0438\u0445\u0456\u0434\u043D\u0438\u0439<br>\
-  \u0417.\u043F. \u0441\u0442\u0430\u0431\u0456\u043B\u044C\u043D\u043E \u0432\u0438\u0441\u043E\u043A\u0430
+vacancies.name1=Mechanic auto locksmith
+vacancies.conditions1=<h2>Working conditions:</h2><br>\
+  Weekly: 09:00 - 20:00<br>\
+  Saturday: 10:00 - 18:00<br>\
+  Sunday: holiday<br>\
+  Salary. stable high
 vacancies.requirements1=<h2>Requirements:</h2><br>\
 <ul>\
-<li>\u0434\u043E\u0441\u0432\u0456\u0434 \u0440\u043E\u0431\u043E\u0442\u0438 \u043D\u0435 \u043C\u0435\u043D\u0448\u0435 3-\u043E\u0445 \u0440\u043E\u043A\u0456\u0432.</li>\
-<li>\u0437\u043D\u0430\u043D\u043D\u044F \u0431\u0443\u0434\u043E\u0432\u0438 \u0441\u0443\u0447\u0430\u0441\u043D\u043E\u0433\u043E \u043B\u0435\u0433\u043A\u043E\u0432\u043E\u0433\u043E \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u044F\
-\u0456 \u043F\u0440\u0438\u043D\u0446\u0438\u043F\u0456\u0432 \u0439\u043E\u0433\u043E \u0440\u0435\u043C\u043E\u043D\u0442\u0443.\
-</li>\
-<li>\u0437\u043D\u0430\u043D\u043D\u044F \u0442\u0435\u043E\u0440\u0456\u0457 \u0442\u0430 \u043F\u0440\u0430\u043A\u0442\u0438\u0447\u043D\u0438\u0439 \u0434\u043E\u0441\u0432\u0456\u0434 \u0432 \u043F\u0438\u0442\u0430\u043D\u043D\u044F\u0445\
-\u0437\u0430\u043C\u0456\u043D\u0438 \u043C\u0430\u0441\u0435\u043B \u0442\u0430 \u0456\u043D\u0448\u0438\u0445 \u0440\u043E\u0431\u043E\u0447\u0438\u0445 \u0440\u0456\u0434\u0438\u043D.\
-</li>\
-<li>\u0437\u043D\u0430\u043D\u043D\u044F \u0441\u0442\u0430\u043D\u0434\u0430\u0440\u0442\u0456\u0432 \u0442\u0430 \u043D\u043E\u0440\u043C\u0430\u0442\u0438\u0432\u0456\u0432 \u043F\u043E \u0440\u0435\u043C\u043E\u043D\u0442\u0443 \u0442\u0430\
-\u043E\u0431\u0441\u043B\u0443\u0433\u043E\u0432\u0443\u0432\u0430\u043D\u043D\u044E \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0456\u043B\u0456\u0432\
-</li>\
-<li>\u0437\u043D\u0430\u043D\u043D\u044F \u043F\u0440\u0430\u0432\u0438\u043B \u0442\u0435\u0445\u043D\u0456\u043A\u0438 \u0431\u0435\u0437\u043F\u0435\u043A\u0438 \u0442\u0430 \u043F\u0440\u043E\u0442\u0438\u043F\u043E\u0436\u0435\u0436\u043D\u043E\u0457 \u0431\u0435\u0437\u043F\u0435\u043A\u0438.</li>\
-<li>\u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u043B\u044C\u043D\u0456\u0441\u0442\u044C \u0442\u0430 \u0430\u043A\u0443\u0440\u0430\u0442\u043D\u0456\u0441\u0442\u044C.</li>\
+<li>work experience more than 3 years.</li>\
+<li>knowledge of the structure of a modern car and the principles of its repair. </li>\
+<li>knowledge of the theory and practical experience in replacing oil and other working liquids. </li>\
+<li>knowledge of standards for repair and maintenance of automobiles.</li>\
+<li>knowledge of safety rules and fire safety.</li>\
+<li>responsibility and precision.</li>\
 </ul>
-vacancies.name2=\u0410\u0432\u0442\u043E\u0441\u043B\u044E\u0441\u0430\u0440 \u0437\u0456 \u0432\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044F \u0433\u0430\u0437\u043E\u0431\u0430\u043B\u043E\u043D\u043D\u043E\u0433\u043E \u043E\u0431\u043B\u0430\u0434\u043D\u0430\u043D\u043D\u044F
-vacancies.conditions2=<h2>\u0423\u043C\u043E\u0432\u0438 \u0440\u043E\u0431\u043E\u0442\u0438:</h2><br>\
-\u0411\u0443\u0434\u043D\u0456: 09:00 - 20:00<br>\
-\u0421\u0443\u0431\u043E\u0442\u0430: 10:00 - 18:00<br>\
-\u041D\u0435\u0434\u0456\u043B\u044F: \u0432\u0438\u0445\u0456\u0434\u043D\u0438\u0439<br>\
-\u0417.\u043F. \u0441\u0442\u0430\u0431\u0456\u043B\u044C\u043D\u043E \u0432\u0438\u0441\u043E\u043A\u0430
+vacancies.name2=Automobile mechanic for gas cylinder equipment installation
+vacancies.conditions2=<h2>Working conditions:</h2><br>\
+Weekly: 09:00 - 20:00<br>\
+  Saturday: 10:00 - 18:00<br>\
+  Sunday: holiday<br>\
+  Salary. stable high
 vacancies.requirements2=<h2>Requirements:</h2><br>\
 <ul>\
-<li>\u0434\u043E\u0441\u0432\u0456\u0434 \u0440\u043E\u0431\u043E\u0442\u0438 \u043D\u0435 \u043C\u0435\u043D\u0448\u0435 3-\u043E\u0445 \u0440\u043E\u043A\u0456\u0432.</li>\
-<li>\u0437\u043D\u0430\u043D\u043D\u044F \u043F\u0440\u0430\u0432\u0438\u043B \u0442\u0435\u0445\u043D\u0456\u043A\u0438 \u0431\u0435\u0437\u043F\u0435\u043A\u0438 \u0442\u0430 \u043F\u0440\u043E\u0442\u0438\u043F\u043E\u0436\u0435\u0436\u043D\u043E\u0457 \u0431\u0435\u0437\u043F\u0435\u043A\u0438.</li>\
-<li>\u0432\u0456\u0434\u043F\u043E\u0432\u0456\u0434\u0430\u043B\u044C\u043D\u0456\u0441\u0442\u044C \u0442\u0430 \u0430\u043A\u0443\u0440\u0430\u0442\u043D\u0456\u0441\u0442\u044C.</li>\
-<li>\u0434\u0435\u0442\u0430\u043B\u0456 \u0437\u0430 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u043E\u043C.</li>\
+<li>work experience more than 3 years.<</li>\
+<li>knowledge of safety rules and fire safety.</li>\
+<li>responsibility and precision.</li>\
+<li>details by phone.</li>\
 </ul>
 vacancies.contacts=Contact number:
