master -> tasks ->3 and 6

--- a/src/main/resources/language-en.properties
+++ b/src/main/resources/language-en.properties
@@ -78,6 +78,8 @@ orders.price=Price
 orders.reception_point=The place of repair
 orders.master=Master
 orders.created_date=Created date
+orders.delete=Remove order
+orders.action=Actions
 
 services.name=Service name
 services.category=Service type
